--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-# remote_theme: pages-themes/architect@v0.2.0
-# title: Резюме
-# show_downloads: false
+remote_theme: pages-themes/architect@v0.2.0
+title: Резюме
+show_downloads: false
